--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1><strong>Mi Primer Sitio Web</strong></h1>
         <img src="images/google.jpg" alt="Imagen Google">
-        <p>Este es mi primer sitio web...Este es mi primer parrafo</p>
+        <p>Este es mi primer sitio web...da clic sobre la imagen</p>
         <a href="https://www.google.com/?&bih=730&biw=1519&hl=es">Para mas informacion clic aqui...</a>
         
         <h4>Lista Ordenada</h4>
